Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Constant.out
Constant.java:12:9: compiler.err.attribute.value.must.be.constant
1 error
